90° Bezier handles mess up zoom #41042

Closed
opened 2014-07-12 11:15:04 +02:00 by Immor · 9 comments
Immor commented 2014-07-12 11:15:04 +02:00 (Migrated from localhost:3001)

System
Windows 7, 64bit

Blender version
Blender 2.71 and all earlier, which i tested.

Short description
Rotation Bezier-handles with an angle of +/-90° cause the "zoom to selected" function to zoom to a too low/high y-Value.

Steps to reproduce
90Bezier.blend
In the attached file select all and zoom to selected (Numpad .). The zoom goes too far out.
You can also deselect the x-Rotation keyframe at frame 20 and zoom to selected and it will work right.

**System** Windows 7, 64bit **Blender version** Blender 2.71 and all earlier, which i tested. **Short description** Rotation Bezier-handles with an angle of +/-90° cause the "zoom to selected" function to zoom to a too low/high y-Value. **Steps to reproduce** [90Bezier.blend](https://archive.blender.org/developer/F97557/90Bezier.blend) In the attached file select all and zoom to selected (Numpad .). The zoom goes too far out. You can also deselect the x-Rotation keyframe at frame 20 and zoom to selected and it will work right.
Immor commented 2014-07-12 11:15:04 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Immor commented 2014-07-12 11:15:04 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @Immor

Added subscriber: @Immor
Immor commented 2014-07-12 11:21:54 +02:00 (Migrated from localhost:3001)
Author

By the way: changing the problematic keyframe to linear only masks the problem.

By the way: changing the problematic keyframe to linear only masks the problem.
Joshua Leung was assigned by Bastien Montagne 2014-07-12 18:01:07 +02:00

Added subscribers: @JoshuaLeung, @mont29

Added subscribers: @JoshuaLeung, @mont29

Assigning to @JoshuaLeung to get its advice one this one, but for me there is no real bug here… Indeed, switching from bezier to linear interpolation hides the far-away handle, but it is still there, so show all takes it into account…

Might be easy to change that behavior though?

Assigning to @JoshuaLeung to get its advice one this one, but for me there is no real bug here… Indeed, switching from bezier to linear interpolation hides the far-away handle, but it is still there, so show all takes it into account… Might be easy to change that behavior though?
Immor commented 2014-07-14 08:38:07 +02:00 (Migrated from localhost:3001)
Author

Alright, might be more of a design thing than a bug.
It is interrupting the workflow majorly though, especially when working with smaller values than in the example. Which is always the case when working with quaternion rotations. It is still zooming to the same y-Value of 400something then.

Alright, might be more of a design thing than a bug. It is interrupting the workflow majorly though, especially when working with smaller values than in the example. Which is always the case when working with quaternion rotations. It is still zooming to the same y-Value of 400something then.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Fixed in 73d157e

Fixed in 73d157e
Immor commented 2014-07-23 17:37:29 +02:00 (Migrated from localhost:3001)
Author

Cool, thanks!

Cool, thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41042
No description provided.