Bugfix T41042: Irrelevant Bezier handles still affect Graph Editor Show All

The "Show All" and "Show Selected" operators in the Graph Editor was taking into
account all handles on keyframes, even when some of those would be invalid and/or
set to nonsense values (e.g. for any interpolation mode other than "Bezier")